--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- Font Awesome -->
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" media="screen and (min-device-width: 769px)">
         <link rel="shortcut icon" href="favicon.ico">
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
         <script src="./gana.js"></script>
